--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,27 +30,22 @@ jobs:
       - name: Check if GitHub Repository Has Been Synced from SVN Before
         id: check_repo
         run: |
-          if [ -d "git-svn/.git" ]; then
-            cd git-svn || exit 1
-            if git branch -r | grep -q "origin/trunk"; then
-              echo "SVN_SYNCED=true" >> $GITHUB_ENV
-            else
-              echo "SVN_SYNCED=false" >> $GITHUB_ENV
-            fi
+          if git branch -r | grep -q "origin/trunk"; then
+            echo "SVN_SYNCED=true" >> $GITHUB_ENV
           else
             echo "SVN_SYNCED=false" >> $GITHUB_ENV
           fi
+
+      - name: Get Latest SVN Revision
+        run: |
+          LATEST_SVN_REV=$(svn info --show-item last-changed-revision $SVN_REPO_URL)
+          echo "LATEST_SVN_REV=$LATEST_SVN_REV" >> $GITHUB_ENV
 
       - name: Get Last Synced SVN Revision
         if: env.SVN_SYNCED == 'true'
         run: |
           LAST_SYNCED_REV=$(git log --grep="git-svn-id" -1 --format="%b" | sed -n 's/.*@\([0-9]\+\) .*/\1/p' || echo "")
           echo "LAST_SYNCED_REV=$LAST_SYNCED_REV" >> $GITHUB_ENV
-
-      - name: Get Latest SVN Revision
-        run: |
-          LATEST_SVN_REV=$(svn info --show-item last-changed-revision $SVN_REPO_URL)
-          echo "LATEST_SVN_REV=$LATEST_SVN_REV" >> $GITHUB_ENV
 
       - name: Determine SVN Fetch Range
         if: env.SVN_SYNCED == 'true'
@@ -81,16 +76,15 @@ jobs:
           EOF
           chmod +x fetch-authors.sh
 
-      - name: Initialize Git-SVN (Full Clone if No Previous Sync)
+      - name: Initial - Full Clone (if No Previous Sync)
         if: env.SVN_SYNCED == 'false'
         run: |
-          rm -rf git-svn
-          git svn clone --stdlayout --no-minimize-url --no-metadata --authors-prog=./fetch-authors.sh $SVN_REPO_URL git-svn
+          rm -rf .git
+          git svn clone --stdlayout --no-minimize-url --no-metadata --authors-prog=./fetch-authors.sh $SVN_REPO_URL .
 
-      - name: Commit Initial Sync to GitHub
+      - name: Initial - Commit to GitHub
         if: env.SVN_SYNCED == 'false'
         run: |
-          cd git-svn
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
@@ -103,124 +97,107 @@ jobs:
             echo "No changes to commit."
           fi
 
-      - name: Push Initial Sync to GitHub
+      - name: Initial - Push to GitHub
         if: env.SVN_SYNCED == 'false'
         run: |
-          cd git-svn
           git remote add origin $GITHUB_REPO_URL || true
           git push --all origin --force
           git push --tags origin --force
 
-      - name: Ensure authors.json Exists
+      - name: Sync - Fetch New SVN Commits
+        if: env.SVN_SYNCED == 'true'
+        run: |
+          git svn fetch --all
+          git svn rebase
+
+      - name: Sync - Get New Commit Hashes
+        if: env.SVN_SYNCED == 'true'
+        run: |
+          LAST_SYNCED_COMMIT=$(git svn find-rev r$LAST_SYNCED_REV || git rev-list --max-parents=0 HEAD)
+          NEW_COMMITS=$(git log --format="%H" $LAST_SYNCED_COMMIT..HEAD)
+          echo "$NEW_COMMITS" > new_commits.txt
+
+      - name: Sync - Ensure authors.json Exists
         run: |
           if [ ! -f authors.json ]; then
             echo "{}" > authors.json
             echo "Created empty authors.json file."
           fi
 
-      - name: Extract Authors From Initial Sync
-        if: env.SVN_SYNCED == 'false'
-        run: |
-          cd git-svn
-
-          # Extract all commit authors
-          AUTHORS=$(git log --format='%aN' | sort -u)
-
-          for AUTHOR in $AUTHORS; do
-            if jq -e ".\"$AUTHOR\"" ../authors.json >/dev/null; then
-              continue
-            fi
-
-            WP_USERNAME=$(curl -s "https://profiles.wordpress.org/wp-json/wporg-github/v1/lookup/$AUTHOR" | jq -r '.slug' || echo "$AUTHOR")
-
-            if [[ "$WP_USERNAME" != "null" ]]; then
-              jq --arg author "$AUTHOR" --arg wp_user "$WP_USERNAME" '. + {($author): $wp_user}' ../authors.json > ../authors_tmp.json && mv ../authors_tmp.json ../authors.json
-            fi
-          done
-
-          echo "Authors have been extracted and cached."
-
-      - name: Fetch Only New SVN Commits
-        if: env.SVN_SYNCED == 'true'
-        run: |
-          cd git-svn
-          git svn fetch --all
-          git svn rebase
-
-      - name: Get New Commit Hashes
-        if: env.SVN_SYNCED == 'true'
-        run: |
-          cd git-svn
-          LAST_SYNCED_COMMIT=$(git svn find-rev r$LAST_SYNCED_REV || git rev-list --max-parents=0 HEAD)
-          NEW_COMMITS=$(git log --format="%H" $LAST_SYNCED_COMMIT..HEAD)
-          echo "$NEW_COMMITS" > ../new_commits.txt
-
-      - name: Restore Cached Username Mapping
-        id: cache-authors
+      - name: Sync - Restore Cached Username Mapping
         uses: actions/cache@v3
         with:
           path: authors.json
           key: wp-authors-cache
 
-      - name: Map WordPress.org Usernames to GitHub (Only New Commits)
+      - name: Sync - Map WordPress.org Usernames to GitHub (Only New Commits)
         if: env.SVN_SYNCED == 'true'
         run: |
-          cd git-svn
-          if [ ! -f ../authors.json ]; then
-            echo "{}" > ../authors.json
-          fi
-          NEW_COMMITS=$(cat ../new_commits.txt)
+          NEW_COMMITS=$(cat new_commits.txt)
           AUTHORS=$(git log --format='%aN' -- $NEW_COMMITS | sort -u)
+
+          # Store known usernames in memory to avoid duplicate API calls
+          declare -A USERNAME_CACHE
+
           for AUTHOR in $AUTHORS; do
-            if jq -e ".\"$AUTHOR\"" ../authors.json >/dev/null; then
+            if jq -e ".\"$AUTHOR\"" authors.json >/dev/null; then
               continue
             fi
-            WP_USERNAME=""
-            for i in {1..3}; do
-              WP_USERNAME=$(curl -s "https://profiles.wordpress.org/wp-json/wporg-github/v1/lookup/$AUTHOR" | jq -r '.slug' || echo "null")
-              if [[ "$WP_USERNAME" != "null" ]]; then
-                break
-              fi
-              sleep $((2 ** i))
-            done
+
+            # Check cache first
+            if [[ -n "${USERNAME_CACHE[$AUTHOR]}" ]]; then
+              WP_USERNAME=${USERNAME_CACHE[$AUTHOR]}
+            else
+              # Fetch from API with retries
+              WP_USERNAME=""
+              for i in {1..3}; do
+                WP_USERNAME=$(curl -s "https://profiles.wordpress.org/wp-json/wporg-github/v1/lookup/$AUTHOR" | jq -r '.slug' || echo "null")
+                if [[ "$WP_USERNAME" != "null" ]]; then
+                  USERNAME_CACHE[$AUTHOR]=$WP_USERNAME
+                  break
+                fi
+                sleep $((2 ** i))
+              done
+            fi
+
             if [[ "$WP_USERNAME" != "null" ]]; then
-              jq --arg author "$AUTHOR" --arg wp_user "$WP_USERNAME" '. + {($author): $wp_user}' ../authors.json > ../authors_tmp.json && mv ../authors_tmp.json ../authors.json
+              jq --arg author "$AUTHOR" --arg wp_user "$WP_USERNAME" '. + {($author): $wp_user}' authors.json > authors_tmp.json && mv authors_tmp.json authors.json
             fi
           done
 
-      - name: Save Cached Username Mapping
+      - name: Sync - Save Cached Username Mapping
         uses: actions/cache@v3
         with:
           path: authors.json
           key: wp-authors-cache
 
-      - name: Sync SVN Branches to Git
+      - name: Sync - SVN Branches to Git
         if: env.SVN_SYNCED == 'true'
         run: |
-          cd git-svn
           for branch in $(git branch -r | grep "origin/" | grep -v "trunk" | sed 's/origin\///'); do
             git branch --track "$branch" "origin/$branch" || true
             git checkout "$branch" && git svn rebase || true
           done
 
-      - name: Sync SVN Tags to Git
+      - name: Sync - SVN Tags to Git
         if: env.SVN_SYNCED == 'true'
         run: |
-          cd git-svn
           for tag in $(git for-each-ref --format='%(refname:short)' refs/remotes/origin/tags); do
             git tag "${tag#origin/tags/}" "refs/remotes/$tag"
           done
 
-      - name: Optimize Git Repository
+      - name: Clean - Optimize Git Repository
         run: |
-          cd git-svn
           git gc --aggressive --prune=now
           git repack -A -d --depth=250 --window=250
 
-      - name: Push All Branches and Tags to GitHub
+      - name: Sync - All Branches and Tags to GitHub
         if: env.SVN_SYNCED == 'true'
         run: |
-          cd git-svn
           git remote add origin $GITHUB_REPO_URL || true
-          git push --all origin --force
-          git push --tags origin --force
+          if [ -n "$(git status --porcelain)" ]; then
+            git push --all origin --force
+            git push --tags origin --force
+          else
+            echo "No new commits to push."
+          fi
