--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch: # Allows manual trigger
 
 env:
-  GITHUB_USERNAME: "jjj"
+  GITHUB_USERNAME: "JJJ"
   SVN_REPO_URL: "https://bbpress.svn.wordpress.org"
   GITHUB_REPO_URL: "https://github.com/${{ github.repository }}.git"
 
@@ -136,6 +136,35 @@ jobs:
 
           chmod +x cache-authors.sh
 
+      - name: Files - Create Git Push Script
+        run: |
+          cat << 'EOF' > git-push.sh
+          #!/bin/bash
+          set -e
+
+          # Ensure we're in the correct working directory
+          cd /__w/${{ github.event.repository.name }}/${{ github.event.repository.name }} || exit 1
+
+          # Configure Git authentication
+          git config --global credential.helper store
+          echo "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com" > ~/.git-credentials
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+          # Ensure correct Git remote is set
+          git remote set-url origin "https://github.com/${{ github.repository }}.git"
+
+          # Push only if there are changes
+          if [ -n "$(git status --porcelain)" ]; then
+            git push --all origin --force
+            git push --tags origin --force
+          else
+            echo "No new commits to push."
+          fi
+          EOF
+
+          chmod +x git-push.sh
+
       - name: Init - Full Clone if No Previous Sync (Loooong...)
         if: env.SVN_SYNCED == 'false'
         run: |
@@ -161,17 +190,14 @@ jobs:
             echo "No changes to commit."
           fi
 
-      - name: Init - Push to GitHub
-        if: env.SVN_SYNCED == 'false'
-        run: |
-          git remote add origin $GITHUB_REPO_URL || true
-          git push --all origin --force
-          git push --tags origin --force
-
       - name: Init - Cache Authors from Initial Sync
         if: env.SVN_SYNCED == 'false'
         run: |
           ./cache-authors.sh
+
+      - name: Init - Push to GitHub
+        if: env.SVN_SYNCED == 'false'
+        run: ./git-push.sh
 
       - name: Sync - Fetch New SVN Commits
         if: env.SVN_SYNCED == 'true'
@@ -223,13 +249,6 @@ jobs:
           git gc --aggressive --prune=now
           git repack -A -d --depth=250 --window=250
 
-      - name: Sync - All Branches and Tags to GitHub
+      - name: Sync - Push to GitHub
         if: env.SVN_SYNCED == 'true'
-        run: |
-          git remote set-url origin $GITHUB_REPO_URL
-          if [ -n "$(git status --porcelain)" ]; then
-            git push --all origin --force
-            git push --tags origin --force
-          else
-            echo "No new commits to push."
-          fi
+        run: ./git-push.sh
